--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <title>市民通</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<div id="app">
+    <transition name="fade">
+        <keep-alive>
+            <router-view></router-view>
+        </keep-alive>
+    </transition>
+</div>
+<script type="text/javascript" src="../dll/modules.16ee3a2f.dll.js"></script>
+<script type="text/javascript" src="./app.e1a3eae4.bundle.js"></script></body>
 </html>
+
